--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
 install:
   - go get -v ./...
   - go get github.com/onsi/gomega
-  - go install github.com/onsi/ginkgo/ginkgo
+  - go install github.com/paybyphone/ginkgo/ginkgo
   - export PATH=$PATH:$HOME/gopath/bin
 
 script: $HOME/gopath/bin/ginkgo -r --randomizeAllSpecs --failOnPending
